Fixed spacing on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -337,3 +337,9 @@
     background-position: 0% 50%;
   }
 }
+
+@media (max-width: 768px) {
+  .heroText {
+    font-size: 2rem; /* Adjust this value as needed */
+  }
+}
